--- a/layout/post.pug
+++ b/layout/post.pug
@@ -1,4 +1,4 @@
-extends partial/layout
+extends partial/layout.pug
 
 block site_title
     != page.title + " · " + config.title
@@ -8,13 +8,13 @@ block description
     meta(name="description", content=desc)
 
 block container
-    include mixins/post
+    include mixins/post.pug
     +post(page)
 
 block pagination
-    include mixins/paginator
+    include mixins/paginator.pug
     +post()
-    include partial/comment
+    include partial/comment.pug
 
 block copyright
-    include partial/copyright
+    include partial/copyright.pug
